tests/ui/macros/macro-path-prelude-shadowing.stderr
error[E0659]: `std` is ambiguous
  --> $DIR/macro-path-prelude-shadowing.rs:29:9
   |
LL |         std::panic!();
   |         ^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
   = note: `std` could refer to a built-in crate
note: `std` could also refer to the module imported here
  --> $DIR/macro-path-prelude-shadowing.rs:27:9
   |
LL |     use m2::*; // glob-import user-defined `std`
   |         ^^^^^
   = help: consider adding an explicit import of `std` to disambiguate
   = help: or use `self::std` to refer to this module unambiguously

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
